Implementation : When the user click on the bookmark icon V1.14

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ input {
   --columns-row: 2;
 }
 
-#container {
+.grid {
     text-align:left;
       display: grid;
     /*  grid-template-columns: repeat(var(--columns-row), 1fr); */
