--- a/style.css
+++ b/style.css
@@ -51,3 +51,8 @@ input {
 @media (min-width: 1300px) {
   .grid { grid-template-columns: repeat(3, 1fr); }
 }
+
+.image {
+margin-top:30px;
+width:80px
+}
